adjusted user guide button

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div style="display: flex; margin-top: 10px; margin-left: 2%;">
-  <app-select-time-dropdown style="flex: 1; margin-left: 6%;"></app-select-time-dropdown>
-  <app-select-view-dropdown style="flex: 1"></app-select-view-dropdown>
-  <app-user-guide-button style="margin-right: 23px;"></app-user-guide-button>
+  <app-user-guide-button style="margin-left: 0.2%; margin-top: 0.2%;"></app-user-guide-button>
+  <app-select-time-dropdown style="margin-left: 2%;"></app-select-time-dropdown>
+  <app-select-view-dropdown style="margin-left: 2%;"></app-select-view-dropdown>
 </div>
 <div style="display: flex; justify-content: space-between">
   <div style="flex: 1">
