added emotion note on dashboard

--- a/EmotionFrontend/src/app/dashboard/dashboard.component.html
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,8 @@
     <app-radar-chart></app-radar-chart>
   </div>
   <div style="flex: 1">
-    <app-radar-chart-writing></app-radar-chart-writing>
+    <!-- <app-radar-chart-writing></app-radar-chart-writing> -->
+     <app-emotion-rating></app-emotion-rating>
   </div>
 </div>
 <app-report-emotion-button class="btn btn-help" (click)="helpWindow()"></app-report-emotion-button>
