--- a/EmotionFrontend/src/app/dashboard/dashboard.component.css
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.css
@@ -1,18 +1,53 @@
-.dashboard-container {
+/* .dashboard-container {
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .radar-chart-container {
-  flex: 1;
+  /* flex: 1; */
   /* margin-right: 10px; Optional: Adjust margin between charts */
 }
 
 .right-section {
   margin-top: 50px;
-  width: 50%; /* You can adjust the width as needed for the right section */
+  width: 60%;
   display: absolute;
   flex-direction: column;
   height: 60vh;
-  overflow-y: auto; 
+  overflow-y: auto;
+}
+
+.button {
+  appearance: none;
+  background-color: #0e1111;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 15px;
+  font-weight: 600;
+  line-height: normal;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  box-shadow: rgba(0, 0, 0, 0.4) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
