--- a/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
+++ b/EmotionFrontend/src/app/emotion-rating/emotion-rating.component.html
@@ -1,39 +1,51 @@
 <!-- <app-header></app-header> -->
 <div class="container">
-	<section style="display: flex; justify-content: space-between; align-items: center;">
-		<div>
-			<h3>{{title}} : {{datasetLabel}}</h3>
-		</div>
-		<div>
-			<!-- <app-intensity-dropdown></app-intensity-dropdown> -->
-			<app-intensity-dropdown (selectedValueChange)="filterList($event)"></app-intensity-dropdown>
-		</div>
-	</section>
-	
-	<div class="d-flex flex-column flex-md-row" >
-	<div class="col-10" >
-	  <div class="scrollspy-example scrollspy-container">
-		<div *ngFor="let emoReadWrite of filteredEmoReadWrite; let i = index">
-		<section [mdbScrollspyElement]="'scrollspy'" [id]="'example-' + (currentSectionNumber + i)" class="survey-section">
-			  <h3>Note {{ currentSectionNumber + i }}</h3>
-			  <p>{{emoReadWrite.Timestamp}}</p>
-			  <div class="question-answer">
-				<p class="question">Title: </p>
-				<p>{{ emoReadWrite.NoteTitle }}</p> 
-				<p class="question">Content: </p>
-				<p>{{ emoReadWrite.NoteContent}}</p>
-				<app-star-rating *ngFor="let intensity of emoReadWrite.Intensity" [intensity]="intensity.value"></app-star-rating>
+  <section
+    style="display: flex; justify-content: space-between; align-items: center"
+  >
+    <div>
+      <h3>
+        {{ title }}<span *ngIf="title && datasetLabel"> : </span
+        >{{ datasetLabel }}
+      </h3>
+    </div>
+    <div>
+      <!-- <app-intensity-dropdown></app-intensity-dropdown> -->
+      <app-intensity-dropdown
+        (selectedValueChange)="filterList($event)"
+      ></app-intensity-dropdown>
+    </div>
+  </section>
 
-				<hr class="section-divider">
-			</div>
-			
-		  </section>
-		</div>
-		  
-	  </div>
-	</div>
-	
-	<!-- <div class="col-2" style="position: sticky; top:0; justify-content: center; align-items: center;padding-left: 15px;">
+  <div class="d-flex flex-column flex-md-row">
+    <div class="col-10">
+      <div class="scrollspy-example scrollspy-container">
+        <div *ngFor="let emoReadWrite of filteredEmoReadWrite; let i = index">
+          <section
+            [mdbScrollspyElement]="'scrollspy'"
+            [id]="'example-' + (currentSectionNumber + i)"
+            class="survey-section"
+          >
+            <h3>Note {{ currentSectionNumber + i }}</h3>
+            <p>{{ emoReadWrite.Timestamp }}</p>
+            <div class="question-answer">
+              <p class="question">Title:</p>
+              <p>{{ emoReadWrite.NoteTitle }}</p>
+              <p class="question">Content:</p>
+              <p>{{ emoReadWrite.NoteContent }}</p>
+              <app-star-rating
+                *ngFor="let intensity of emoReadWrite.Intensity"
+                [intensity]="intensity.value"
+              ></app-star-rating>
+
+              <hr class="section-divider" />
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="col-2" style="position: sticky; top:0; justify-content: center; align-items: center;padding-left: 15px;">
 	  <div id="scrollspy" style=" position: fixed; z-index: 1; height: 70%; overflow: auto;" class="sidebar">
 		<ul [mdbScrollspy]="'scrollspy'" class="nav flex-column nav-pills menu-sidebar">
 			<li class="nav-item" *ngFor="let emoReadWrite of filteredEmoReadWrite; let i = index">
