--- a/EmotionFrontend/src/app/popup-window/popup-window.component.css
+++ b/EmotionFrontend/src/app/popup-window/popup-window.component.css
@@ -14,5 +14,5 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: auto; /* Centering the block itself if necessary */
+  margin: auto;
 }
