--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.html
@@ -2,190 +2,184 @@
   <h1>Emotion Survey</h1>
   <div>
     <h2>I am feeling...</h2>
+    <h3 style="font-weight: 100">
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Very Weak &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Weak &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Moderate
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Strong
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Very Strong
+    </h3>
     <div class="radio-group">
       <label class="emotion-label">Joyful 😀:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Joyful" value="1" />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Joyful" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Joyful" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Joyful" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Joyful" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Curious 😳:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Curious" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Curious" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Curious" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Curious" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Curious" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Surprised 😲:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Surprised" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Surprised" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Surprised" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Surprised" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Surprised" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Confused 😕:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Confused" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Confused" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Confused" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Confused" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Confused" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Anxious 😰:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Anxious" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Anxious" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Anxious" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Anxious" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Anxious" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Frustrated 😣:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Frustrated" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Frustrated" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Frustrated" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Frustrated" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Frustrated" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
   <div>
     <div class="radio-group">
       <label class="emotion-label">Bored 🥱:</label>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label>
         <input type="radio" formControlName="Bored" value="1" />
-        <br />
-        Very Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Bored" value="2" />
-        Weak
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Bored" value="3" />
-        Moderate
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Bored" value="4" />
-        Strong
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </label>
       <label>
         <input type="radio" formControlName="Bored" value="5" />
-        <br />
-        Very Strong
       </label>
     </div>
   </div>
@@ -227,7 +221,7 @@
     </div>
   </div>
   <div>
-    <h2 for="Reason">What caused that emotion?</h2>
+    <h2 for="Reason">What caused that emotion? [Optional]</h2>
     <textarea
       formControlName="Reason"
       id="Reason"
@@ -235,7 +229,9 @@
     ></textarea>
   </div>
   <div>
-    <h2 for="Remarks">Is there anything else that you want to share?</h2>
+    <h2 for="Remarks">
+      Is there anything else that you want to share? [Optional]
+    </h2>
     <textarea
       formControlName="Remarks"
       id="Remarks"
