--- a/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.css
+++ b/ReportEmotionForm/src/app/emotion-slider/emotion-slider.component.css
@@ -49,3 +49,10 @@ label {
   font-size: 20px; /* Adjust the font size as needed */
 }
 
+.horizontal-options {
+  display: flex;
+}
+
+.horizontal-options div {
+  margin-right: 20px; /* Adjust as needed */
+}
