--- a/EmotionFrontend/src/app/dashboard/dashboard.component.css
+++ b/EmotionFrontend/src/app/dashboard/dashboard.component.css
@@ -10,29 +10,29 @@
 
 .right-section {
   margin-top: 50px;
-  width: 60%;
-  display: absolute;
-  flex-direction: column;
+  margin-right: 100px;
+  width: 50%;
+  display: flex;
   height: 60vh;
-  overflow-y: auto;
 }
 
 .button {
   appearance: none;
   background-color: #0e1111;
-  border: 2px solid #1A1A1A;
+  border: 2px solid #1a1a1a;
   border-radius: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 15px;
   font-weight: 600;
   line-height: normal;
   outline: none;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
